<resources>
    <string name="app_name">3SC Android Task</string>
    <string name="err_no_internet_connected">Oops!! No internet Connected</string>
    <string name="search_pokemon">Search Pokemon</string>
    <string name="no_results">No Results Found</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
    <string name="cancel">No</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="total">Total</string>
    <string name="speed">Speed</string>
    <string name="sp_def">Sp. Def</string>
    <string name="sp_atk">Sp. Atk</string>
    <string name="defense">Defense</string>
    <string name="name">Name: </string>
    <string name="base_stats">Base Stats</string>
    <string name="height">Height: </string>
    <string name="weight">Weight: </string>
    <string name="base_exp">Base Experience: </string>
    <string name="slide_right_to_view_more_images_of_pokemon">Slide right to view more images of pokemon</string>
</resources>